--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.8",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
