--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mantine/core": "^4.0.8",
+    "@mantine/form": "^4.0.8",
+    "@mantine/hooks": "^4.0.8",
+    "@mantine/next": "^4.0.8",
+    "@mantine/notifications": "^4.0.8",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@modulz/radix-icons": "^4.0.0",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@stripe/react-stripe-js": "^1.7.0",
@@ -26,6 +32,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "tabler-icons-react": "^1.41.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
